fix: add overflow hidden on root to make root cover wrapper + top length

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,6 +15,6 @@ body {
 }
 
 #root {
-    // overflow: scroll;
+    overflow: hidden;
     // height: 100vh;
 }
